# i-rocket

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  interp_rocket.py  interp_rocket_regressor.py  pyproject.toml  requirements.txt  test_interp_rocket.py  three_bumps.py
.github/workflows/: tests.yml
examples/: benchmark_ucr.py  benchmark_waveform.py  demo_GunPoint.ipynb  demo_RF_mapping.ipynb  demo_pimp.ipynb  demo_three_bumps.ipynb  examples.md
extensions/: amee_evaluation.py  channel_selection.py  demo_channel_selection.ipynb  demo_tshap_amee_bump.ipynb  demo_tshap_amee_waveform.ipynb  extract_activations.py  kernel_explorer.py  lfp_tools.py  lfp_tools_emd.py  tshap_integration.py
