[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "interp-rocket"
version = "0.3.0"
description = "Interpretable ROCKET for time series classification"
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.9"
authors = [
    {name = "Mark Laubach", email = "laubach@american.edu"},
]
keywords = [
    "time series",
    "classification",
    "regression",
    "interpretability",
    "convolutional kernels",
    "ROCKET",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.22",
    "numba>=0.50",
    "scikit-learn>=1.0",
    "matplotlib>=3.5",
]

[project.urls]
Homepage = "https://github.com/LaubachLab/i-rocket"
Repository = "https://github.com/LaubachLab/i-rocket"

[tool.setuptools]
py-modules = ["interp_rocket", "interp_rocket_regressor", "three_bumps"]
